syntax = "proto3";

package berty.entity;

option go_package = "berty.tech/core/entity";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

message SenderAlias {
  enum Status {
    UNKNOWN = 0;
    SENT = 1;
    SENT_AND_ACKED = 2;
    RECEIVED = 3;
  }

  string id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];


  Status status = 5;
  string origin_device_id = 6 [(gogoproto.customname) = "OriginDeviceID"];
  string contact_id = 7 [(gogoproto.customname) = "ContactID"];
  string conversation_id = 8 [(gogoproto.customname) = "ConversationID"];
  string alias_identifier = 9;
  bool used = 10;
}
